<resources>
    <string name="app_name">HNG Task 1</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="short_bio">Short Bio</string>
</resources>
